<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Sure Shot Discounts</string>
    <string name="text_sign_up">Sign up</string>
    <string name="text_enter_your_mobile">Enter your details to create account.</string>
    <string name="text_mobile_number">Mobile Number</string>
    <string name="button_text_continue">Continue</string>
    <string name="text_referrals_id">Referral ID(Optional)</string>
    <string name="text_cd_sign_up_image">Sign up image</string>
    <string name="text_label_have_account">Already have an account? Sign In</string>
    <string name="text_hint_name">Name</string>
    <string name="text_hint_email_id">Email Id</string>
    <string name="text_hint_confirm_password">Confirm Password</string>
    <string name="text_error_name">Name cannot be empty</string>
    <string name="text_error_email_id">Invalid email id</string>
    <string name="text_error_password">Password cannot be less than 6 digit</string>
    <string name="text_error_password_match">Password does not match</string>
    <string name="text_no_data_found">No data Found</string>
    <string name="text_label_sign_in">Sign In</string>
    <string name="text_label_sign_in_sub_header">Enter your mobile number to sign in.</string>
    <string name="text_label_no_account">Not registered yet? Sign Up</string>
    <string name="text_hint_password">Password</string>
    <string name="text_error_otp">Invalid OTP</string>
    <string name="text_label_verify_proceed"><![CDATA[Verify & Proceed]]></string>
    <string name="text_verification">Verification</string>
    <string name="text_enter_4_digit">Enter 4 digit verification code sent on below given number</string>
    <string name="text_verification_code">Verification Code</string>
    <string name="hint_time">60 Sec</string>
    <string name="text_did_not_receive_the_code">Did not receive the code? Resend SMS</string>
    <string name="text_t_c_apply"><![CDATA[*T&C Apply]]></string>
    <string name="alert_login_failed_title">Unable to login!</string>
    <string name="alert_login_failed_message">Please make sure you have entered correct mobile number and password</string>
    <string name="alert_login_error_message">Something went wrong while logging you in, please login again!</string>
    <string name="text_error_incorrect_o_t_p">Incorrect OTP</string>
    <string name="text_refer_and_earn">Refer and Earn!</string>
    <string name="text_invite_your_friends">Invite Your friends</string>
    <string name="text_refer_now">Refer Now</string>
    <string name="text_subscription_plan_benefits"><![CDATA[SUBSCRIPTION PLAN & BENEFITS ]]></string>
    <string name="text_payment_successful">Payment Successful !</string>
    <string name="button_continue">CONTINUE</string>
    <string name="text_refer_earn"><![CDATA[REFER & EARN]]></string>
    <string name="text_savings_earnings"><![CDATA[SAVINGS & EARNINGS]]></string>
    <string name="text_change">Change</string>
    <string name="hint_text_enter_mobile_number">Enter Mobile Number</string>
    <string name="button_proceed">PROCEED</string>
    <string name="text_label_recharge">Recharge</string>
    <string name="text_label_location">Select Location</string>
    <string name="text_label_mobile">Mobile</string>
    <string name="text_hint_subscription_id">Subscription Id</string>
    <string name="text_error_subscription_id">Invalid Subscription Id</string>
    <string name="text_label_recharge_type">Recharge Type</string>
    <string name="hint_text_enter_amount">Enter Amount</string>
    <string name="text_see_plan">See Plan</string>
    <string name="text_enter_amount_equal_to_or_above_10">Enter amount equal to or Above ₹ 10</string>
    <string name="text_tokens_and_promo">Tokens and Promo Cash cannot be used for mobile recharges</string>
    <string name="button_proceed_to_recharge">PROCEED TO RECHARGE</string>
    <string name="text_label_rupees">₹ <xliff:g example="250" id="enter_amount">%s</xliff:g></string>
    <string name="text_your_referral_code">Your Referral code</string>
    <string name="text_tap_to_copy">Tap to copy</string>
    <string name="button_share_now">Share Now</string>
    <string name="button_pay_now">Pay Now</string>
    <string name="title_activity_dashboard_main">DashboardMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="text_hint_address">Address</string>
    <string name="text_hint_pan_no">Pan No.</string>
    <string name="text_cd_upload_address_proof">Upload Address Proof</string>
    <string name="text_cd_upload_pan_card">Upload Pan Card</string>
    <string name="text_label_accept_contract">I accept the contract between me and Sure Shot Application</string>
    <string name="text_label_verify">Verify</string>
    <string name="text_label_verify_your_kyc">Verify your KYC to start earning by referring to others.</string>
    <string name="action_logout">Logout</string>
    <string name="alert_logout_heads_up_title">Are you sure?</string>
    <string name="alert_logout_heads_up_message">You are about to logout from your account!</string>
    <string name="text_recharge_amount">500</string>
    <string name="text_order_id">Order Id %1$s</string>
    <string name="text_tokens_and_promo_dth">Tokens and Promo Cash cannot be used for dth recharges</string>
    <string name="text_error_mobile">Invalid mobile number</string>
    <string name="text_error_empty_field">Field cannot be empty</string>
    <string name="alert_connection_status_not_ok_title">Connection Error!</string>
    <string name="alert_connection_status_not_ok_message">Unable to connect to server!</string>
    <string name="alert_connection_lost_title">Oops!!</string>
    <string name="alert_connection_lost_message">Connection Lost! Please try again</string>
    <string name="text_login_to_continue">Please login to continue!</string>
    <string name="text_cd_company_logo">Company Logo</string>
    <string name="text_label_prepaid">Prepaid</string>
    <string name="text_label_postpaid">Postpaid</string>
    <string name="text_label_mobile_recharge">Mobile Recharge</string>
    <string name="text_label_dth">DTH</string>
    <string name="text_label_benefits_of_subscription">Benefits of Subscription</string>
    <string name="text_label_pay_to_subscribe_now">Pay to subscribe now</string>
    <string name="text_error_unable_to_load">Unable to load data, please make sure you are connected to the Internet</string>
    <string name="text_hint_payment_medium">Payment Medium</string>
    <string name="text_label_order_id">Order Id: <xliff:g example="145789789" id="order_id">%s</xliff:g></string>
    <string name="text_label_recharge_for">Recharge for <xliff:g example="Idea" id="company_name">%s</xliff:g></string>
    <string name="text_hint_status">Status</string>
    <string name="text_label_my_account">My Account</string>
    <string name="text_label_referrals_list">Referrals List</string>
    <string name="text_label_contact">Contact Us</string>
    <string name="text_label_recharge_history">Recharge History</string>
    <string name="text_label_payment_mode">Payment Mode</string>
    <string name="text_label_reference_number">Reference number</string>
    <string name="text_hint_write_here">Write here…</string>
    <string name="text_label_submit">Submit</string>
    <string name="text_label_amount">Amount</string>
    <string name="text_label_expiry_date">Expiry Date</string>
    <string name="text_label_renew">Renew</string>
    <string name="text_label_subscription_plan">Subscription Plan</string>
    <string name="text_label_plans">Plans</string>
    <string name="text_hint_operator_name">Operator Name</string>
    <string name="text_label_talktime">Talktime</string>
    <string name="text_label_validity">Validity</string>
    <string name="text_hint_description">Description</string>
    <string name="text_hint_days">Days</string>
    <string name="text_label_balance_earnings">Balance Earnings</string>
    <string name="text_label_withdraw">Withdraw</string>
    <string name="text_label_referrals">Referrals</string>
    <string name="text_label_level">LEVEL <xliff:g example="1" id="level">%s</xliff:g></string>
    <string name="text_label_unsubscribed">Unsubscribed - <xliff:g example="3" id="unsubscribed">%s</xliff:g></string>
    <string name="text_label_subscribed">Subscribed - <xliff:g example="10" id="subscribed">%s</xliff:g></string>
    <string name="text_label_please_wait">Please wait…</string>
    <string name="text_label_levels_detail">Levels Detail</string>
    <string name="text_hint_title">Title</string>
    <string name="text_hint_message">Message</string>
    <string name="text_label_cancel">Cancel</string>
    <string name="text_label_confirm">Confirm</string>
    <string name="text_label_logout_message">Are you sure you want to logout from this app?</string>
    <string name="text_label_paytm">PAYTM</string>
    <string name="text_label_bank">BANK</string>
    <string name="text_label_how_much_money_do_you_want_to_withdraw">How much money do you want to withdraw?</string>
    <string name="text_hint_enter_withdrawal_amount">Enter withdrawal amount</string>
    <string name="text_label_terms_and_conditions">Terms And Conditions:</string>
    <string name="text_label_all_terms_and_conditions">
        Your number should be active with PayTM.\nMinimum withdrawal amount is Rs.10.\nYou should have your KYC done for your PayTM Wallet.\nWithdrawal request sent with invalid PayTM number will not be refunded.
    </string>
    <string name="text_label_enter_bank_details">Enter your bank detail to continue!</string>
    <string name="text_label_why_need_details">Why do you need these details?</string>
    <string name="text_label_bank_needs">We need these details so that we can transfer the amount to your account.\n\nDon\'t worry we will
        call and verify these details at least once before er transfer the amount to your bank account.</string>
    <string name="text_hint_name_on_account">Name on Account</string>
    <string name="text_hint_account_number">Account Number</string>
    <string name="text_hint_ifsc_code">IFSC Code</string>
    <string name="text_hint_bank_name">Bank Name</string>
    <string name="text_hint_branch_address">Branch Address</string>
    <string name="text_label_save_bank_details_and_withdraw">Save Bank Details And Withdraw</string>
    <string name="text_label_forgot_password">Forgot Password</string>
    <string name="text_label_forgot_password_message">Enter your mobile number to get otp to create new password</string>
    <string name="text_label_get_otp">Get OTP</string>
    <string name="text_label_forgot">Forgot Password?</string>
    <string name="text_label_create_new_password">Create New Password</string>
    <string name="text_label_create_new_password_message">Enter your details to create new password</string>
    <string name="text_hint_enter_new_password">Enter New Password</string>
    <string name="text_hint_enter_otp">Enter OTP</string>
    <string name="text_hint_confirm_new_password">Confirm New Password</string>
    <string name="text_label_success">Success</string>
    <string name="text_label_failure">Failure</string>
    <string name="text_label_privacy_and_policy">Privacy And Policy</string>
    <string name="text_label_about_us">About Us</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>