<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/myAccountFragment"
            android:title="@string/text_label_my_account" />

        <item
            android:id="@+id/rechargeHistoryFragment"
            android:title="@string/text_label_recharge_history" />

        <item
            android:id="@+id/subscriptionPlanFragment"
            android:title="@string/text_label_subscription_plan" />

        <item
            android:id="@+id/item3"
            android:title="@string/text_label_referrals_list" />

        <item
            android:id="@+id/contactUsFragment"
            android:title="@string/text_label_contact" />

    </group>

</menu>