<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.logout.LogoutFragment">

    <TextView
        android:id="@+id/textViewLogoutTitle"
        android:layout_width="@dimen/material_dimen_constraint"
        android:layout_height="wrap_content"
        android:hint="@string/text_hint_title"
        android:maxLines="1"
        android:text="@string/action_logout"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/guidelineTop" />

    <TextView
        android:id="@+id/textViewLogoutMessage"
        android:layout_width="@dimen/material_dimen_constraint"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_dimen_ldpi"
        android:hint="@string/text_hint_message"
        android:text="@string/text_label_logout_message"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogoutTitle" />

    <TextView
        android:id="@+id/textViewLogoutCancel"
        android:layout_width="@dimen/material_dimen_constraint"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_dimen_mdpi"
        android:background="?selectableItemBackground"
        android:gravity="center"
        android:padding="@dimen/material_dimen_ldpi"
        android:text="@string/text_label_cancel"
        android:textAllCaps="false"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
        app:layout_constraintEnd_toStartOf="@+id/textViewLogoutConfirm"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogoutMessage"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/textViewLogoutConfirm"
        android:layout_width="@dimen/material_dimen_constraint"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/material_dimen_mdpi"
        android:background="?selectableItemBackground"
        android:gravity="center"
        android:padding="@dimen/material_dimen_ldpi"
        android:text="@string/text_label_confirm"
        android:textAllCaps="false"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textColor="@color/colorAccent"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewLogoutCancel"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewLogoutCancel" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/material_dimen_mdpi" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/material_dimen_mdpi" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/material_dimen_mdpi" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/material_dimen_mdpi" />

</androidx.constraintlayout.widget.ConstraintLayout>