<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorRecharge"
    tools:context=".ui.referralslist.withdraw.PaytmFragment">

    <TextView
        android:id="@+id/textViewPaytmBalanceEarningsLabel"
        android:layout_width="@dimen/material_dimen_constraint"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_dimen_mdpi"
        android:text="@string/text_label_balance_earnings"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintEnd_toStartOf="@+id/textViewPaytmBalanceEarnings"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/guidelineTop" />

    <TextView
        android:id="@+id/textViewPaytmBalanceEarnings"
        android:layout_width="@dimen/material_dimen_constraint"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/material_dimen_mdpi"
        android:gravity="end"
        android:hint="@string/text_label_rupees"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewPaytmBalanceEarningsLabel"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewPaytmBalanceEarningsLabel" />

    <TextView
        android:id="@+id/textViewPaytmWithdrawAmount"
        android:layout_width="@dimen/material_dimen_constraint"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_dimen_xhdpi"
        android:gravity="center"
        android:text="@string/text_label_how_much_money_do_you_want_to_withdraw"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/textViewPaytmBalanceEarningsLabel" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPaytmEnterWithdrawalAmount"
        style="@style/AppTheme.TextInputLayout"
        android:layout_width="@dimen/material_dimen_constraint"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_dimen_mdpi"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/textViewPaytmWithdrawAmount">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextPaytmEnterWithdrawalAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_hint_enter_withdrawal_amount"
            android:inputType="number"
            android:maxLines="1"
            android:textAppearance="@android:style/TextAppearance.Medium" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonPaytmWithdraw"
        style="@style/AppTheme.Button.Light.Rounded"
        android:layout_width="@dimen/material_dimen_constraint"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_dimen_mdpi"
        android:text="@string/text_label_withdraw"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPaytmEnterWithdrawalAmount" />

    <TextView
        android:id="@+id/textViewPaytmTermAndConditionsLabel"
        android:layout_width="@dimen/material_dimen_constraint"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_dimen_mdpi"
        android:text="@string/text_label_terms_and_conditions"
        android:textAppearance="@android:style/TextAppearance.Small"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/buttonPaytmWithdraw" />

    <TextView
        android:id="@+id/textViewPaytmTermAndConditions"
        android:layout_width="@dimen/material_dimen_constraint"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Small"
        android:text="@string/text_label_all_terms_and_conditions"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/textViewPaytmTermAndConditionsLabel"
        app:layout_constraintVertical_bias="0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/material_dimen_mdpi" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/material_dimen_mdpi" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/material_dimen_mdpi" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/material_dimen_mdpi" />

</androidx.constraintlayout.widget.ConstraintLayout>