<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_sign_up"
    tools:context=".ui.forgotpassword.ForgotPasswordFragment">

    <TextView
        android:id="@+id/textViewForgotPasswordLabel"
        android:layout_width="@dimen/material_dimen_constraint"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_dimen_xhdpi"
        android:text="@string/text_label_forgot_password"
        android:textSize="@dimen/material_text_display1"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/guidelineTop" />

    <TextView
        android:id="@+id/textViewForgotPasswordMessage"
        android:layout_width="@dimen/material_dimen_constraint"
        android:layout_height="wrap_content"
        android:text="@string/text_label_forgot_password_message"
        android:textAppearance="@android:style/TextAppearance.Large"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/textViewForgotPasswordLabel" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutForgotPasswordMobileNumber"
        style="@style/AppTheme.TextInputLayout"
        android:layout_width="@dimen/material_dimen_constraint"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_dimen_mdpi"
        app:hintTextAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/textViewForgotPasswordMessage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextForgotPasswordMobileNumer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_mobile_number"
            android:inputType="phone"
            android:maxLines="1"
            android:textAppearance="@android:style/TextAppearance.Large" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonForgotPasswordGetOTP"
        style="@style/AppTheme.Button.Light.Rounded"
        android:layout_width="@dimen/material_dimen_constraint"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_dimen_mdpi"
        android:layout_marginBottom="@dimen/material_dimen_xhdpi"
        android:text="@string/text_label_get_otp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutForgotPasswordMobileNumber"
        app:layout_constraintVertical_bias="0" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/contentLoadingProgressBarForgotPassword"
        android:layout_width="@dimen/material_dimen_constraint"
        android:layout_height="wrap_content"
        android:theme="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/guidelineTop" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/material_dimen_mdpi" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/material_dimen_mdpi" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/material_dimen_mdpi" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/material_dimen_mdpi" />

</androidx.constraintlayout.widget.ConstraintLayout>